# monday

./: .env.example  AGENTS.MD  NOTES.md  README.md  agents.md  api_notes.md  plan.md  pyproject.toml  requirements.txt  runbook.md  schema.md  threat_model.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-template.md  chore-template.md  feature-template.md
.github/workflows/: eslint.yml  frontend-prettier.yml  pytest.yml  ruff.yml
app/: __init__.py  config.py  events.py  logging_setup.py  main.py
app/audio/: __init__.py  engine.py  io.py
app/executor/: __init__.py  actions.py
app/permissions/: __init__.py  gate.py  state.py
app/realtime/: __init__.py  client 2.py  client.py  smoke_test.py
app/state/: __init__.py  session.py
app/tools/: __init__.py  contracts.py  validator.py
app/ui/: main_window.py
app/vision/: __init__.py  camera.py
frontend/: AGENTS.md  package-lock.json  package.json
minimal_voice_core/: README.md  monday_voice_core.py  playwright_web_agent.py  requirements.txt  run.py
tests/: test_event_bus.py  test_permission_state.py  test_tool_validator.py
voice_core/: .env.example  AGENTS.md  README.md  __init__.py  __main__.py  monday_voice_core.py  requirements.txt  run.py
voice_core/tests/: conftest.py  test_monday_voice_core.py  test_run.py
