[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monday-voice-core"
version = "0.1.0"
description = "Terminal-based voice, text, camera, and browser assistant for the Monday project."
readme = "voice_core/README.md"
requires-python = ">=3.10"
keywords = ["audio", "gemini", "multimodal", "voice"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "google-genai",
    "python-dotenv",
    "opencv-python",
    "pyaudio",
    "playwright",
    "websockets",
    "exceptiongroup; python_version < '3.11'",
    "taskgroup; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "build>=1.2.1",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
monday-voice = "voice_core.run:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["voice_core"]

[tool.setuptools.package-data]
voice_core = [".env.example"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["voice_core"]
exclude = [
    "voice_core/.venv",
    "voice_core/__pycache__",
]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["voice_core"]

[tool.mypy]
python_version = "3.10"
files = ["voice_core"]
exclude = "(^voice_core/\\.venv/|^voice_core/__pycache__/)"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
